fix broken styles on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,20 +10,20 @@ body {
     font-weight: 400;
     line-height: 1.45;
     color: #333;
-    margin: 0;;
+    margin: 0;
 }
 
 p {margin-bottom: 1.4em;}
 
 h1, h2, h3, h4 {
-    margin: 0.8em 0; 0.5em;
+    margin: 0.8em 0 0.5em;
     font-family: 'Oswald', helvetica, sans-serif;
     font-weight: inherit;
     line-height: 1.2;
 }
 
 h1 {
-    margin-top: 0;;
+    margin-top: 0;
     font-size: 3.157em;
 }
 
@@ -48,7 +48,7 @@ small, .font_small {font-size: 0.75em;}
 
 .content {
     background: #FFFFFF;
-    padding: 0;;
+    padding: 0;
     margin-bottom: 20px;
 }
 
@@ -139,13 +139,13 @@ nav.navigation .closebtn {
     nav.navigation {
         /* Height & width depends on how you want to reveal the overlay (see JS below) */
         height: 100%;
-        width: 0;;
+        width: 0;
         position: fixed; /* Stay in place */
         z-index: 1; /* Sit on top */
-        left: 0;;
-        top: 0;;
-        background-color: rgb(0;,0;,0;); /* Black fallback color */
-        background-color: rgba(0;,0;,0;, 0.9); /* Black w/opacity */
+        left: 0;
+        top: 0;
+        background-color: rgb(0,0,0); /* Black fallback color */
+        background-color: rgba(0,0,0,0.9); /* Black w/opacity */
         overflow-x: hidden; /* Disable horizontal scroll */
         transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
     }
@@ -159,7 +159,7 @@ nav.navigation .closebtn {
         display: flex;
         align-content: center;
         flex-direction: column;
-        padding: 0;;
+        padding: 0;
     }
 
     nav.navigation > ul li {
@@ -167,7 +167,7 @@ nav.navigation .closebtn {
         justify-content: center;
         text-align: center;
         width: 100%;
-        padding: 0.8em 0;;
+        padding: 0.8em 0;
         border-bottom: 1px solid #818181;
     }
 
@@ -185,7 +185,7 @@ nav.navigation .closebtn {
     }
 
     nav.navigation .closebtn {
-        display: block;\
+        display: block;
         color: #818181;
         position: absolute;
         top: 30px;
@@ -226,7 +226,7 @@ nav.navigation .closebtn {
 }
 
 .post-header h2 {
-    margin: auto 0;
+    margin: auto 0
     text-align: left;
     border-bottom: 1px solid #BDBDBD;
 }
@@ -241,7 +241,7 @@ nav.navigation .closebtn {
     background: #212121;
     color: #ffffff;
     padding: 0.2em 0.4em;
-    margin: 0; 0.2em 0.6em 0.3em;
+    margin: 0 0.2em 0.6em 0.3em;
     font-size: 0.7em;
     display: inline-block;
 }
@@ -288,7 +288,7 @@ article {
 }
 
 blockquote {
-    margin-left: 0;;
+    margin-left: 0;
     padding-left: 30px;
     border-left: 6px solid #9E9E9E;
 }
@@ -327,7 +327,7 @@ blockquote {
 /* Right Sidebar */
 #right-content {
     position: sticky;
-    top: 0;;
+    top: 0;
 }
 
 #right-content > div {
@@ -344,7 +344,7 @@ blockquote {
 }
 
 #right-content > div > h4 {
-    margin: 0; 0; 10px;
+    margin: 0 0 10px;
     padding-bottom: 5px;
     text-align: left;
     border-bottom: 1px solid #BDBDBD;
@@ -357,7 +357,7 @@ blockquote {
 img.avatar {
     display: block;
     border-radius: 50%;
-    margin: 0; auto;
+    margin: 0 auto;
     padding-bottom: 5px;
 }
 
